bugs where fixed on mobile responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1000,7 +1000,7 @@ select:hover{
 }
 .mobile_menu{
   position: absolute;
-  top: 64px;
+  top: 48px;
   left: 0;
   z-index: 1;
   width: 100%;
